--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fuchszunft Menningen e.V.</title>
+    <style>
+      /* Preload background color to minimize flash */
+      body { background-color: #fafaf9; } /* stone-50 */
+    </style>
   </head>
   <body>
     <div id="root"></div>
