--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!doctype html>
-<html lang="en">
+<html lang="de">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fuchszunft Menningen e.V.</title>
+    
+    <!-- Preload kritisches Hero-Bild für schnelleren LCP -->
+    <link rel="preload" as="image" href="/src/assets/Gesamt.jpg" fetchpriority="high" />
+    
     <script>
       if (
         localStorage.theme === 'dark' ||
