Feat: Update deployment URL in README, add Open Graph tags for social media, and replace logo image

--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <link rel="icon" type="image/png" href="/src/assets/FZ Wappen digital_klein.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fuchszunft Menningen e.V.</title>
+
+    <!-- Open Graph Tags für Social Media (WhatsApp, Facebook etc.) -->
+    <meta property="og:title" content="Fuchszunft Menningen e.V." />
+    <meta property="og:description" content="Willkommen bei der Fuchszunft Menningen! Hier findest du alle aktuellen Termine, News und Infos rund um unsere Fasnet." />
+    <meta property="og:image" content="https://fuchszunft-menningen.de/FZ%20Wappen%20digital_klein.png" />
+    <meta property="og:url" content="https://fuchszunft-menningen.de/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Fuchszunft Menningen" />
+    <meta property="og:locale" content="de_DE" />
     
     <!-- Preload kritisches Hero-Bild für schnelleren LCP -->
     
