Layout-Optimierung: Kulturerbe Logo vergrößert, Responsive Design angepasst & Dark Mode Fixes

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta property="og:description" content="Willkommen bei der Fuchszunft Menningen! Hier findest du alle aktuellen Termine, News und Infos rund um unsere Fasnet." />
     <meta property="og:image" content="https://fuchszunft-menningen.de/FZ%20Wappen%20digital_klein.png" />
     <meta property="og:url" content="https://fuchszunft-menningen.de/" />
+    <link rel="canonical" href="https://fuchszunft-menningen.de/" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Fuchszunft Menningen" />
     <meta property="og:locale" content="de_DE" />
@@ -30,7 +31,7 @@
     </script>
     
     <!-- Preload kritisches Hero-Bild für schnelleren LCP -->
-    
+    <link rel="preload" as="image" href="/src/assets/Gesamt.jpg" />
     <script>
       if (
         localStorage.theme === 'dark' ||
