--- a/index.html
+++ b/index.html
@@ -5,16 +5,26 @@
     <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fuchszunft Menningen e.V.</title>
+    <meta name="description" content="Offizielle Website der Fuchszunft Menningen e.V. - Alle Infos zur Fasnet, unseren Figuren Fuchs & Henne und aktuellen Terminen." />
+    <meta name="theme-color" content="#1c1917" />
 
     <!-- Open Graph Tags für Social Media (WhatsApp, Facebook etc.) -->
     <meta property="og:title" content="Fuchszunft Menningen e.V." />
     <meta property="og:description" content="Willkommen bei der Fuchszunft Menningen! Hier findest du alle aktuellen Termine, News und Infos rund um unsere Fasnet." />
     <meta property="og:image" content="https://fuchszunft-menningen.de/FZ%20Wappen%20digital_klein.png" />
+    <meta property="og:image:width" content="512" />
+    <meta property="og:image:height" content="512" />
     <meta property="og:url" content="https://fuchszunft-menningen.de/" />
     <link rel="canonical" href="https://fuchszunft-menningen.de/" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Fuchszunft Menningen" />
     <meta property="og:locale" content="de_DE" />
+
+    <!-- Twitter/X Card Tags -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="Fuchszunft Menningen e.V." />
+    <meta name="twitter:description" content="Offizielle Website der Fuchszunft Menningen e.V. - Alle Infos zur Fasnet, unseren Figuren Fuchs & Henne und aktuellen Terminen." />
+    <meta name="twitter:image" content="https://fuchszunft-menningen.de/FZ%20Wappen%20digital_klein.png" />
     
     <!-- Strukturiert Daten (JSON-LD) für Organisation -->
     <script type="application/ld+json">
@@ -46,6 +56,12 @@
   </head>
   <body>
     <div id="root"></div>
+    <noscript>
+      <div style="text-align:center;padding:4rem 2rem;font-family:sans-serif;color:#44403c">
+        <h1 style="font-size:1.5rem;margin-bottom:1rem">Fuchszunft Menningen e.V.</h1>
+        <p>Bitte aktiviere JavaScript, um diese Seite vollständig nutzen zu können.</p>
+      </div>
+    </noscript>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
