--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fuchszunft Menningen e.V.</title>
-    <meta name="description" content="Offizielle Website der Fuchszunft Menningen e.V. - Alle Infos zur Fasnet, unseren Figuren Fuchs & Henne und aktuellen Terminen." />
+    <meta name="description" content="Offizielle Website der Fuchszunft Menningen e.V. - Alle Infos zur Fasnet, unseren Figuren und aktuellen Terminen." />
     <meta name="theme-color" content="#1c1917" />
 
     <!-- Open Graph Tags für Social Media (WhatsApp, Facebook etc.) -->
@@ -23,7 +23,7 @@
     <!-- Twitter/X Card Tags -->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="Fuchszunft Menningen e.V." />
-    <meta name="twitter:description" content="Offizielle Website der Fuchszunft Menningen e.V. - Alle Infos zur Fasnet, unseren Figuren Fuchs & Henne und aktuellen Terminen." />
+    <meta name="twitter:description" content="Offizielle Website der Fuchszunft Menningen e.V. - Alle Infos zur Fasnet, unseren Figuren und aktuellen Terminen." />
     <meta name="twitter:image" content="https://fuchszunft-menningen.de/FZ%20Wappen%20digital_klein.png" />
     
     <!-- Strukturiert Daten (JSON-LD) für Organisation -->
